# Yoshida-Compensation

./: .gitignore  .gitmodules  README.md  config.toml  main.py  pyproject.toml
.github/instructions/: commit-message.instructions.md
data/chess_captured/: camera_calib.npz
data/debug_warp_outputs_DEBUG_ONLY/: README.md
data/pose_output/: pose_unity.json
data/sample_warp_debug_DEBUG_ONLY/: README.md
examples/python/: capture.py  debug_warp_outputs.py  sample.py
src/python/: cam_in_calib.py  cap_chess.py  color_mixing_matrix.py  config.py  photometric_compensation.py  project_and_capture.py  solvePnP.py
src/python/camera/: __init__.py  base.py  canon_edsdk.py  factory.py  opencv.py
tests/: test_canon_edsdk.py  test_debug_warp_outputs.py  test_graycode_cap_graycode.py  test_sample_mocked.py
