[project]
name = "yoshida-compensation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "opencv-contrib-python>=4.11.0.86",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[project.optional-dependencies]
sample = [
    "rawpy",
    "psutil",
]

